fixing page header misalignment

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -43,7 +43,7 @@ h2 {
 
 h2.page-header {
     padding-left: 20px;
-    margin: .83em 0;
+    margin: 20px 0;
 }
 
 a {
